# guikit-learn

./: MANIFEST.in  setup.cfg
guikit_learn/: __init__.py  __version__.py  _call.py  cmd.txt  guikitlearn.py  追加機能.txt
guikit_learn/datasets/: __init__.py  _load_csv.py  default.ini  test.py
guikit_learn/estimators/: __init__.py  _automl.py  _estimators.py  _tabnet.py
guikit_learn/evaluaters/: 5-Fold.ini  LOGO.ini  LOO.ini  __init__.py  _base.py  _plot.py
guikit_learn/explainers/: __init__.py  _explainers.py
guikit_learn/explorers/: __init__.py  _explorers.py
guikit_learn/feature_engineering/: __init__.py  _engineers.py
guikit_learn/feature_selection/: __init__.py  _selectors.py
guikit_learn/imputers/: _imputers.py
guikit_learn/model_selection/: __init__.py  _searchers.py  cv.py
guikit_learn/models/: GA.ini  __init__.py  adjust_model.py  default.ini  load_models.py  simple.py
guikit_learn/optimizers/: __init__.py  _optimizers.py
guikit_learn/scalers/: __init__.py  _scalers.py
guikit_learn/utils/: __init__.py  base.py  create_model.py  deprecated.py  save_results.py  utils.py
