[metadata]
name = guikit-learn
version = attr: guikit_learn.__version__.__version__
description = GUI Software for machinelearning
license = GNU Lesser General Public License (LGPL 3) 
author = Yuki.Horie
author_email = Yuki.Horie@mitsuichemicals.com

[options]
packages = find:
install_requires =
    bartpy
    boruta
    deap
    category_encoders
    chardet
    cloudpickle
    dcekit
    deap
    gbart
    japanize_matplotlib
    lightgbm
    linear-tree
    matplotlib
    memory_profiler
    mlxtend
    ngboost
    numpy
    openpyxl
    optuna
    pandas
    Pillow
    pydot
    PySimpleGUI
    rgf-python
    scikit-learn <= 1.2.0
    scipy
    seaborn
    sklearn_expansion
    sklearn_genetic
    skrebate
    shap
    umap_learn
    xgboost

dependency_links = git+ssh://git@github.com/jckkvs/rulefit.git@master

include_package_data = True

[options.entry_points]
console_scripts = 
 guikit-learn = guikit_learn.guikitlearn:main
